--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,4 +24,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: SORA-macOS-Universal
-          path: build/SORA_artefacts/Release/SORA.app
+          path: build/"SORA Control_artefacts"/Release/"SORA Control.app"
