--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.22)
 
-project("SORA Control" VERSION 1.0.0)
+project("SORA Control" VERSION 0.1.0)
 
 # 1. Download & Include JUCE secara otomatis
 include(FetchContent)
@@ -12,7 +12,7 @@ FetchContent_Declare(
 FetchContent_MakeAvailable(juce)
 
 # 2. Buat App SORA
-juce_add_gui_app("SORA Control"
+juce_add_gui_app("SORA Control VERSION 0.1.0"
     PRODUCT_NAME "SORA Control"
     BUNDLE_ID "com.badakculasatu.sora"
     IS_CONTENT_PREVIEW_TRUE
