--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -21,21 +21,21 @@ juce_add_gui_app("SORA Control VERSION 0.1.0"
 )
 
 # 3. Setup Target Architecture (Universal Binary)
-set_target_properties(SORA PROPERTIES 
+set_target_properties("SORA Control" PROPERTIES 
     OSX_ARCHITECTURES "arm64;x86_64"
     OSX_DEPLOYMENT_TARGET "10.15"
 )
 
 # 4. Link Source & Libraries
-target_sources(SORA PRIVATE 
+target_sources("SORA Control" PRIVATE 
     Source/Main.cpp
 )
 
-target_link_libraries(SORA PRIVATE
+target_link_libraries("SORA Control" PRIVATE
     juce::juce_audio_utils
     juce::juce_audio_processors
     juce::juce_gui_extra
     juce::juce_gui_basics
 )
 
-juce_generate_juce_header(SORA)
+juce_generate_juce_header("SORA Control")
