--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,19 +3,21 @@ on: [push]
 
 jobs:
   build:
-    runs-on: macos-latest
+    # Kita ganti ke macos-13 yang merupakan versi terakhir 
+    # yang mendukung rakitan untuk macOS lama secara stabil
+    runs-on: macos-13
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
       - name: Build
         run: |
-          cmake -B build -G Xcode -DCMAKE_OSX_ARCHITECTURES="arm64;x86_64"
+          # Perintah tambahan untuk memaksa Xcode pakai SDK yang lebih rendah
+          cmake -B build -G Xcode -DCMAKE_OSX_DEPLOYMENT_TARGET=10.15 -DCMAKE_OSX_ARCHITECTURES="arm64;x86_64"
           cmake --build build --config Release
 
       - name: Upload
         uses: actions/upload-artifact@v4
         with:
           name: SORA-Control-App
-          # Pakai wildcard (*) biar dia otomatis nemu folder meskipun ada spasi
           path: build/SoraControl_artefacts/Release/*.app
